--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,43 +3,23 @@
 /*--------------------------------------------Colors*/
 
 .bg-color-name-title {
-    background-color: #676767;
+    background-color: #2A144E;
 }
 
-.bg-color-three-reasons {
+.bg-color-three-reasons, .bg-color-skills, .bg-color-groups {
     background-color: #ffffff;
 }
 
-.bg-color-personal-info {
+.bg-color-personal-info, .bg-color-conferences {
     background-color: #f4f4f4;
 }
 
-.bg-color-skills {
-    background-color: #ffffff;
-}
-
-.bg-color-work-history {
-    background-color: #9b59b6;
-}
-
-.bg-color-contact {
-    background-color: #ffffff;
-}
-
-.bg-color-conferences {
-    background-color: #f4f4f4;
-}
-
-.bg-color-groups {
-    background-color: #ffffff;
+.bg-color-work-history, .ui-menu-color-resume {
+    background-color: #0090C1;
 }
 
 .ui-menu-color-home {
-    background-color: #e67e22;
-}
-
-.ui-menu-color-resume {
-    background-color: #9b59b6;
+    background-color: #003D80;
 }
 
 .ui-menu-color-contact {
@@ -47,19 +27,13 @@
 }
 
 .ui-menu-color-download {
-    background-color: #d9a81d;
+    background-color: #00B9CA;
 }
 
 
 .ui-menu-color-github {
     background-color: #1c4a6c;
 }
-
-.ui-menu-color-interests {
-    background-color: #e74c3c;
-}
-
-
 
 
 body {
@@ -151,6 +125,12 @@ header {
 
 #nav li {
     padding: 0;
+}
+
+.nav-list {
+    padding-left: 0;
+    display: flex;
+    list-style-type: none;
 }
 
 .menuitem {
@@ -250,7 +230,7 @@ footer .cv-pdf i:hover {
 
 .three-reasons-icon {
     font-size: 26px;
-    color: #e67e22;
+    color: #1c4a6c;
 }
 
 .three-reasons-heading {
