--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,15 +6,21 @@
     background-color: #2A144E;
 }
 
-.bg-color-three-reasons, .bg-color-skills, .bg-color-groups {
+.bg-color-three-reasons,
+.bg-color-skills,
+.bg-color-groups,
+.bg-color-github {
     background-color: #ffffff;
 }
 
-.bg-color-personal-info, .bg-color-conferences {
+.bg-color-conferences {
     background-color: #f4f4f4;
 }
 
-.bg-color-work-history, .ui-menu-color-resume {
+.bg-color-work-history,
+.ui-menu-color-resume,
+.bg-color-personal-info
+    {
     background-color: #0090C1;
 }
 
@@ -92,7 +98,7 @@ header {
 }
 
 .logo {
-    background: url("../images/rosie.jpg");
+    background: url("../images/myself.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -230,7 +236,7 @@ footer .cv-pdf i:hover {
 
 .three-reasons-icon {
     font-size: 26px;
-    color: #1c4a6c;
+    color: #040404;
 }
 
 .three-reasons-heading {
@@ -284,7 +290,7 @@ footer .cv-pdf i:hover {
     position: absolute;
     left: 0px;
     font-weight: 400;
-    padding: 3px 30px 2px 10px;
+    padding: 11px 41px 13px 14px;
     color: #fafafa;
     background-color: rgba(25, 25, 25, 0.2);
 }
@@ -300,7 +306,7 @@ footer .cv-pdf i:hover {
 .timeline-item {
     padding: 4em 2em 0em 2em;
     position: relative;
-    color: #fafafa;
+    color: #040404;
     border-left: 1px solid;
 }
 
@@ -331,11 +337,11 @@ footer .cv-pdf i:hover {
     left: -6px;
     border-radius: 12px;
     content: '';
-    background: #fafafa;
+    background: #040404;
 }
 
 .history-heading {
-    color: #fafafa;
+    color: #040404;
     margin-bottom: 50px;
 }
 
