--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,16 +2,17 @@
 
 /*--------------------------------------------Colors*/
 
-.bg-color-name-title {
-    background-color: #2A144E;
+.bg-color-name-title,
+.bg-color-github {
+    background-color: #ecac81;
 }
 
 .bg-color-three-reasons,
 .bg-color-skills,
-.bg-color-groups,
-.bg-color-github {
-    background-color: #ffffff;
+.bg-color-groups {
+    background-color: #f4f4f4;
 }
+
 
 .bg-color-conferences {
     background-color: #f4f4f4;
@@ -21,11 +22,11 @@
 .ui-menu-color-resume,
 .bg-color-personal-info
     {
-    background-color: #0090C1;
+    background-color: #B2784F;
 }
 
 .ui-menu-color-home {
-    background-color: #003D80;
+    background-color: #94994A;
 }
 
 .ui-menu-color-contact {
@@ -33,7 +34,7 @@
 }
 
 .ui-menu-color-download {
-    background-color: #00B9CA;
+    background-color: #005B47;
 }
 
 
